Squash merge CORE-3705 into main

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,17 +17,25 @@
   border-image: linear-gradient(--value(--color- *, [color]) 0 0) fill 0 / /0 9999vw 0 9999vw;
 }
 
+@utility custom-scrollbar {
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #454545;
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+}
+
 @layer base {
   button:not(:disabled),
   [role='button']:not(:disabled) {
     cursor: pointer;
-  }
-
-  select {
-    appearance: none;
-    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" /></svg>');
-    background-repeat: no-repeat;
-    background-position: right 1.2rem top 50%;
-    background-size: 1rem;
   }
 }
